# httpx-hedged

./: .gitignore  LICENSE  README.md  httpx_hedged.py  pyproject.toml  test_httpx_hedged.py  test_httpx_hedging.py  tox.ini
.github/workflows/: ci.yml  release.yml
examples/: README.md  app.py  example_usage.py  run_example.sh
httpx_hedged/: __init__.py
src/httpx_hedged/: __init__.py  _bounded.py  _config.py  _health.py  _matcher.py  _options.py  _rate.py  _rotation.py  _scheduler.py  _scheduler_sync.py  _stats.py  sync_transport.py  transport.py
src/httpx_hedged/budget/: __init__.py  _token_bucket.py
src/httpx_hedged/sketch/: __init__.py  _ddsketch.py  _windowed.py
test/: unit_test.py
tests/: conftest.py
tests/integration/: test_httpx_transport.py  test_sync_httpx_transport.py
tests/unit/: test_config.py  test_ddsketch.py  test_health.py  test_matcher.py  test_options.py  test_rate_counter.py  test_rotation.py  test_scheduler.py  test_scheduler_sync.py  test_stats.py  test_token_bucket.py  test_windowed_sketch.py
