[project]
name = "httpx-hedged"
version = "0.1.0"
description = "Plugin for httpx for request heding"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pylsp-mypy>=0.7.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-lsp-server[all]>=1.13.2",
]

[tool.ruff]
# Same as Black.
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "I", "F", "UP", "RUF"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
