[project]
name = "httpx-hedged"
version = "0.2.0"
description = "Adaptive, per-endpoint request hedging transport for httpx. Learns latency percentiles per endpoint with DDSketch, caps hedge rate with a token bucket, and stops hedging under a host/endpoint circuit breaker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pylsp-mypy>=0.7.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-lsp-server[all]>=1.13.2",
]
examples = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/httpx_hedged"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
# Same as Black.
line-length = 88

[tool.ruff.lint]
select = ["E", "I", "F", "UP", "RUF", "ASYNC", "DTZ", "PTH", "PERF", "RET", "A"]
ignore = []
extend-select = ["I"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
